# open-cv-test

./: Cargo.toml
src/: main copy.rs  main.rs  remove_background.rs
