[package]
name = "open-cv-test"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "~0.4", git = "https://github.com/rust-lang/log" }
env_logger = { version = "~0.11", git = "https://github.com/rust-cli/env_logger" }
#
# Internal
sal-core = { tag = "0.1.0", git = "https://github.com/a-givertzman/rust-sal-core.git" }
testing = { git = "https://github.com/a-givertzman/rust-testing.git" }
# testing = { tag = "0.1.2", git = "https://github.com/a-givertzman/rust-testing.git" }
debugging = { tag = "0.0.1", git = "https://github.com/a-givertzman/rust-debuging.git" }
api-tools = { tag = "0.2.1", git = "https://github.com/a-givertzman/rust-api-tools.git" }
# api-tools = { path = "../api-tools/" }
sal-sync = { tag = "0.3.0", git = "https://github.com/a-givertzman/rust-sal-sync.git" }
frdm-tools = { branch = "detecting_contours_cv_config", git = "https://github.com/a-givertzman/frdm-server.git" }
#
# OpenCV
opencv = { version = "~0.95", features = ["clang-runtime"], git = "https://github.com/twistedfall/opencv-rust" }
